--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <h1>PixelVista Explorer</h1>
         <div id="auth-status"></div>
+        <button id="sign-out-button" style="display: none;">Sign Out</button>
     </header>
     <main>
         <section id="search-section">
