--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 </head>
 <body>
-    <header>
-        <h1>PixelVista Explorer</h1>
+   <header>
+    <h1>PixelVista Explorer</h1>
+    <div id="auth-container">
         <div id="auth-status"></div>
         <button id="sign-out-button" style="display: none;">Sign Out</button>
-    </header>
+    </div>
+</header>
     <main>
         <section id="search-section">
             <input type="text" id="search-input" placeholder="Search for images">
