--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>PixelVista Explorer</h1>
     <div id="auth-container">
         <div id="auth-status"></div>
-        <button id="sign-out-button" style= "display:none">Sign Out</button>
+        <button id="sign-out-button" style= "display:inline-block">Sign Out</button>
     </div>
 </header>
     <main>
