--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelVista Explorer 2024</title>
-    <link rel="stylesheet" href="./styles-2.css">
+    <link rel="stylesheet" href="./styles.css">
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js"></script>
     <!-- Add Firebase products that you want to use -->
@@ -12,15 +12,12 @@
 </head>
 <body>
    <header>
-       <div class="logo-container" id="logo-container">
-            <img src="https://raw.githubusercontent.com/anandvip/pixel-vista/main/PixelVista2024.webp" alt="PixelVista Explorer Logo">
-        </div>
     <h1>PixelVista Explorer</h1>
     <div id="auth-container">
         <div id="auth-status"></div>
-        <button id="sign-out-button" style="display:none">Sign Out</button>
+        <button id="sign-out-button" style= "display:none">Sign Out</button>
     </div>
-   </header>
+</header>
     <main>
         <section id="search-section">
             <input type="text" id="search-input" placeholder="Search for images">
