--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelVista Explorer 2024</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles-2.css">
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js"></script>
     <!-- Add Firebase products that you want to use -->
